# rust_learning

./: .gitignore  LICENSE.md
exercices/02_basic_calculator/as_casting_10/: Cargo.toml
exercices/02_basic_calculator/as_casting_10/src/: main.rs
exercices/02_basic_calculator/factorial_05/: Cargo.toml
exercices/02_basic_calculator/factorial_05/src/: main.rs
exercices/02_basic_calculator/for_07/: Cargo.toml
exercices/02_basic_calculator/for_07/src/: main.rs
exercices/02_basic_calculator/if_else_03/: Cargo.toml
exercices/02_basic_calculator/if_else_03/src/: main.rs
exercices/02_basic_calculator/interger_1/: Cargo.toml
exercices/02_basic_calculator/interger_1/src/: main.rs
exercices/02_basic_calculator/panics_04/: Cargo.toml
exercices/02_basic_calculator/panics_04/src/: main.rs
exercices/02_basic_calculator/saturation_09/: Cargo.toml
exercices/02_basic_calculator/saturation_09/src/: main.rs
exercices/02_basic_calculator/while_06/: Cargo.toml
projects/branches/src/: main.rs
projects/commom_collections/: Cargo.toml
projects/commom_collections/src/: main.rs
projects/enum_match/src/: main.rs
projects/eror_handling/: Cargo.toml
projects/eror_handling/src/: main.rs
projects/funcoes/src/: main.rs
projects/generic_types_traits_lifetimes/: Cargo.toml
projects/generic_types_traits_lifetimes/src/: main.rs
projects/jogo_de_advinhacao/: Cargo.toml
projects/jogo_de_advinhacao/src/: main.rs
projects/manage_crates_modules/: Cargo.toml
projects/ownership/src/: main.rs
projects/structs/src/: main.rs
projects/variables/src/: main.rs
(+2 files in other folders)
